Adjust drawer close button to avoid layout issues on tablet and mobile.

--- a/app/assets/stylesheets/modules/_tile.scss
+++ b/app/assets/stylesheets/modules/_tile.scss
@@ -147,19 +147,21 @@
     width: 50px;
     height: 50px;
     text-align: center;
-    top: $base-spacing;
-    right: 3 * $base-spacing;
+    top: 0;
+    right: $base-spacing;
     font-size: $large-font-size;
     font-weight: $weight-bold;
     color: $gray;
     z-index: 10;
-    border: 2px solid darken($gray, 25%);
-    border-radius: 100%;
 
     &:hover{
       color: $light-gray;
       border-color: $light-gray;
       text-decoration: none;
+    }
+
+    @include media('small') {
+      display: none;
     }
   }
 
